applications/sushiweb/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
  name: sushiweb
  labels:
    app: sushiweb
    app.kubernetes.io/component: sushiweb
    app.kubernetes.io/instance: sushiweb
    app.kubernetes.io/name: sushiweb
    app.kubernetes.io/part-of: sushiweb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sushiweb
  template:
    metadata:
      labels:
        app: sushiweb
        deploymentconfig: sushiweb
    spec:
      containers:
        - name: sushiweb
          image: quay.io/schabrolles/sushiweb:v1.0
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
