applications/sushiweb/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sushiweb
  labels:
    app: sushiweb
    app.kubernetes.io/component: sushiweb
    app.kubernetes.io/instance: sushiweb
    app.kubernetes.io/name: sushiweb
    app.kubernetes.io/part-of: sushiweb-app
    app.openshift.io/runtime-version: latest
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: sushiweb
    deploymentconfig: sushiweb
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
