applications/sushiweb/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: sushiweb
  labels:
    app: sushiweb
    app.kubernetes.io/component: sushiweb
    app.kubernetes.io/instance: sushiweb
    app.kubernetes.io/name: sushiweb
    app.kubernetes.io/part-of: sushiweb-app
    app.openshift.io/runtime-version: latest
spec:
  to:
    kind: Service
    name: sushiweb
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
